try to fix scaling issue on iphone
Former-commit-id: be495c472b4c71d5de59f5d6fa82dc77536912b9

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -190,6 +190,7 @@ a {
     bottom: 0;
     min-width: 50%;
     min-height: 50%;
+    max-width: 100%;
     transform: translateX(calc((100% - 100vw) / 2));
 }
 
